# ff-cookie-exception-manager

./: MANIFEST.in  README.md  example-config.conf  pyproject.toml
src/ff_cookie_exception_manager/: cli.py  ff.py  logger.py  main.py  sync.py  webdav.py
src/ff_cookie_exception_manager/resources/: config.ini
